# src/models/contact.ts
@@ -32,13 +32,8 @@ const ContactSchema = new mongoose.Schema(
     },
   },
   {
-    toJSON: {
-      transform(doc, ret) {
-        // delete ret.password;
-        // delete ret.salt;
-        delete ret.__v;
-      },
-    },
+   
+    
   }
 );
 
