# src/models/user.model.ts
@@ -2,14 +2,15 @@ import mongoose, { Document, Model } from "mongoose";
 
 export interface IUser {
   email: string;
-  password: string;
-  isVerified: boolean;
+  // password: string;
+  isVerified?: boolean;
 }
 
 export interface IUserDocument extends Document {
   email: string;
-  password: string;
-  isVerified: boolean;
+  password?: string;
+  isVerified?: boolean;
+  googleId?: string;
 }
 
 export interface IUserModel extends Model<IUserDocument> {}
@@ -21,6 +22,11 @@ const userSchema = new mongoose.Schema(
     isVerified: {
       type: Boolean,
       default: false,
+    },
+    googleId: {
+      type: String,
+      unique: true,
+      sparse: true,
     },
   },
   {
